--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -37,9 +37,9 @@ application/console_wrapper_icon="res://icon.svg"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
+application/company_name="Spaghetti Lagitti"
 application/product_name="AntiTD"
-application/file_description=""
+application/file_description="Mimemomu"
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
